 $Id: ChangeLog,v 1.173 2010/10/11 09:17:46 uehira Exp $

2010-10-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.2.3 released.
	* src/elist.c : fixed bugs.

2010-10-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.2.2 released.
	* src/ecore.c : fixed bugs.
	* update autotools
	  autoconf-2.67
	  automake-1.11

2010-10-04  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.2.1 released.
	* configure.in : use statvfs() in case of __SVR4 (SunOS)

2010-10-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : force #include <sys/param.h> at the time of
  	                 <sys/mount.h> existance check.

2010-10-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvt.c : fixed bugs in check_pno().
	                ht[].pnos[] : unsigned int --> int

2010-09-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvstatus2.c : fixed a bug.

2010-09-27  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.2.0 released.
	* MF rel_64bit.
	* configure.in : check struct statfs.f_bavail size.
	* src/events.c : check struct statfs.f_bavail size.
	* src/wdisk.c :  check __SVR4 and __NetBSD__.
	                 check struct statfs.f_bavail size.

2010-09-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.99 released.
	* prog/ee_manager, prog/wincd : The $* variables has been removed
	  in perl 5.10.
	* src/win.c : '*base' of 'lBitmap' never used. comment out.

2010-06-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.98 released.
	* src/win.c : fixed buffer overrun bug.

2010-06-15  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : bug fixed [in get_trigch()].

2010-06-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.97 released.
	* src/relaym.c : bug fixed.

2010-02-28  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.96 released.
	* configure.in : check sys/mtio.h (for fromtape, rtape, wtape).
	If sys/mtio.h does not exist, these programs are not compiled
	(ex. Mac OS X 10.6).
