@@ -1,4 +1,4 @@
-/* $Id: wdisk.c,v 1.21 2010/09/27 03:25:03 uehira Exp $ */
+/* $Id: wdisk.c,v 1.22 2010/10/12 10:03:14 uehira Exp $ */
 /*
   program "wdisk.c"   4/16/93-5/13/93,7/2/93,7/5/94  urabe
                       1/6/95 bug in adj_time fixed (tm[0]--)
@@ -616,7 +616,9 @@ main(argc,argv)
         }
 
         size=mklong(ptr_save=shm->d+shp);
-        if(size==mklong(ptr_save+size-4)) eobsize_count++;
+        if(size==mklong(ptr_save+size-4)) {
+	  if (++eobsize_count == 0) eobsize_count = 1;
+	}
         else eobsize_count=0;
         if(eobsize && eobsize_count==0) goto reset;
         if(!eobsize && eobsize_count>3) goto reset;
