@@ -1,4 +1,8 @@
- $Id: ChangeLog,v 1.173 2010/10/11 09:17:46 uehira Exp $
+ $Id: ChangeLog,v 1.174 2010/10/12 10:03:14 uehira Exp $
+
+2010-10-12  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* src/order.c, src/raw_raw.c, src/raw_time.c, src/send_raw.c,
+	  src/shmdump.c, src/wdisk.c : fixed eobsize_in counter bug.
 
 2010-10-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* Version 1.2.3 released.
